--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/TranSon1901/api-Booking/issues"
   },
-  "homepage": "https://github.com/TranSon1901/api-Booking#readme"
+  "homepage": "https://github.com/TranSon1901/api-Booking#readme",
+  "devDependencies": {
+    "express": "^4.18.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.12"
+  }
 }
