--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   },
   "homepage": "https://github.com/TranSon1901/api-Booking#readme",
   "devDependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.2"
+    "mongoose": "^6.7.2",
+    "nodemon": "^2.0.12"
   },
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "nodemon": "^2.0.12"
+    "dotenv": "^16.0.3"
   }
 }
