--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT= 3002
 MONGO_DB=mongodb+srv://son:son@cluster0.edjqdpd.mongodb.net/Booking?retryWrites=true&w=majority
+JWT = 8hEnPGeoBqGUT6zksxt4G95gW+uMdzwe7EVaRnp0xRI=
